		truncated or removed) they are now prepended with the @
		character instead of no character. This is compatible with
		ifcico but not with other mailers, but should do no harm 
		because most mailers only look for the ^ and # characters.
		This is for test! Please check if you run mbcico together
		with other mailers. Russell??
		If you only use mbcico there will be no problems.


v0.61.1		20-Jun-2004 - 11-Jul-2004

	upgrade:
		If you compiled with ./configure --enable-newsgate you may
		need to erase the newsgroup names in the echomail areas you
		don't want to gate to news.

	general:
		Added compile directive for full newsgate. If this switch is
		used then mbfido behaves like it did upto version 0.50.0 and
		mbnntp is disabled.
		Added define for nodelist line length for all programs.

	libmsgbase.a:
		If a message area becomes empty after a pack, all lastread
		pointers are reset to zero.

	libdbase.a:
		Removed some debug logging from files database module.

	libmbse.a:
		In nodelist.conf changed the order of fields to search for ip
		information, field 8 before field 6.
		Added a new keyword 'ipprefix' in nodelist.conf to define a
		table with IP prefixes to use in field 6.

	mbout:
		Code cleanup for nodelist processing.

	mbfido:
		Added compile directive for full newsgate.
		Removed logmessage in addpkt function.

	mbindex:
		Code cleanup for nodelist processing.
		Added a extra check to see if nodelist datalines are valid to
		prevent segfaults on Skynet nodelists.
		Does finally compile a username index.

	mbnntp:
		If compiled in full newsmode, this program acts like a dummy.

	mbsebbs:
		Added user@domain login for pop3 mailboxes.
		If pop3 login fails, the bbs won't hang.
		If a users homedirectory doesn't exist, a correct error message
		is displayed and logged.
		If a user replied to a email and the system was in Own 
		maildomain mode, the From address was changed to the Fidonet
		style address instead of Unix address.

	mbsetup: