@@ -357,7 +357,7 @@ int each(faddr *addr, char flavor, int isflo, char *fname)
     if ((isflo == OUT_FLO) || (isflo == OUT_PKT)) 
 	switch (flavor) {
 	    case '?':	break;
-	    case 'i':	(*tmp)->flavors |= F_IMM; break;
+	    case 'd':	(*tmp)->flavors |= F_IMM; break;
 	    case 'o':	(*tmp)->flavors |= F_NORMAL; break;
 	    case 'c':	(*tmp)->flavors |= F_CRASH; break;
 	    case 'h':	(*tmp)->flavors |= F_HOLD; break;
