@@ -90,6 +90,7 @@ static int scan_dir(int (*fn)(faddr *, char, int, char *), char *dname, int ispo
 		       (strcasecmp(de->d_name+8,".cut") == 0) ||
 		       (strcasecmp(de->d_name+8,".hut") == 0) ||
 		       (strcasecmp(de->d_name+8,".iut") == 0) ||
+		       (strcasecmp(de->d_name+8,".dut") == 0) ||
 		       (strcasecmp(de->d_name+8,".opk") == 0) ||
 		       (strcasecmp(de->d_name+8,".cpk") == 0) ||
 		       (strcasecmp(de->d_name+8,".hpk") == 0) ||
@@ -98,6 +99,7 @@ static int scan_dir(int (*fn)(faddr *, char, int, char *), char *dname, int ispo
 		       (strcasecmp(de->d_name+8,".clo") == 0) ||
 		       (strcasecmp(de->d_name+8,".hlo") == 0) ||
 		       (strcasecmp(de->d_name+8,".ilo") == 0) ||
+		       (strcasecmp(de->d_name+8,".dlo") == 0) ||
 		       (strcasecmp(de->d_name+8,".req") == 0) ||
 		       (strcasecmp(de->d_name+8,".pol") == 0)) {
 		if (ispoint)
@@ -107,6 +109,8 @@ static int scan_dir(int (*fn)(faddr *, char, int, char *), char *dname, int ispo
 		flavor = tolower(de->d_name[9]);
 		if (flavor == 'f') 
 		    flavor='o';
+		if (flavor == 'i')
+		    flavor='d';
 		if (strcasecmp(de->d_name+10,"ut") == 0)
 		    isflo=OUT_PKT;
 		else if (strcasecmp(de->d_name+10,"pk") == 0)
